Add Vercel Analytics

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start",
     "typecheck": "tsc --noEmit",
     "seed": "tsx scripts/seed-articles.ts",
-    "ingest:rss": "tsx scripts/ingest-rss.ts"
+    "ingest:rss": "tsx scripts/ingest-rss.ts",
+    "ingest:openclaw": "tsx scripts/import-openclaw.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@vercel/analytics": "^1.6.1",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "fast-xml-parser": "^4.5.1",
